<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.Light.NoActionBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:visibility="visible">


        <TextView
            android:id="@+id/student_title"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/first_name_title"
            android:layout_width="wrap_content"
            android:layout_height="32sp"
            android:layout_marginTop="16dp"
            android:text="@string/first_name_input_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/student_title" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:hint="@string/first_name_input_hint"
            android:inputType="text"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/first_name_title"
            app:layout_constraintTop_toBottomOf="@+id/first_name_title" />

        <TextView
            android:id="@+id/last_name_title"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/last_name_input_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/first_name_input"
            app:layout_constraintTop_toBottomOf="@+id/first_name_input" />

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/last_name_input_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/last_name_title"
            app:layout_constraintTop_toBottomOf="@+id/last_name_title" />

        <TextView
            android:id="@+id/grade_input_title"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/grade_input_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/last_name_input"
            app:layout_constraintTop_toBottomOf="@+id/last_name_input" />

        <EditText
            android:id="@+id/grade_input_entry"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/grade_input_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/grade_input_title"
            app:layout_constraintTop_toBottomOf="@+id/grade_input_title" />

        <TextView
            android:id="@+id/student_id_title"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/id_input_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/grade_input_entry"
            app:layout_constraintTop_toBottomOf="@+id/grade_input_entry" />

        <EditText
            android:id="@+id/id_input_entry"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/id_input_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/student_id_title"
            app:layout_constraintTop_toBottomOf="@+id/student_id_title" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="204dp"
            android:layout_height="45dp"
            android:layout_marginTop="64dp"
            android:text="@string/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_input_entry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/return_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:visibility="visible"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/returned_card_first_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/returned_card_last_name_title"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_last_name_title" />

            <TextView
                android:id="@+id/returned_card_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/returned_card_last_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/returned_card_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/returned_card_first_name"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_first_name" />

            <TextView
                android:id="@+id/returned_card_grade_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/returned_card_first_name_title"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_first_name_title" />

            <TextView
                android:id="@+id/returned_card_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/returned_card_last_name"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_last_name" />

            <TextView
                android:id="@+id/returned_card_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/returned_card_grade_title"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_grade_title" />

            <TextView
                android:id="@+id/returned_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/returned_card_grade"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_grade" />

            <Button
                android:id="@+id/return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/returned_card_id_title"
                app:layout_constraintVertical_bias="0.45" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>