<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_first_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/card_last_name_title"
                app:layout_constraintTop_toBottomOf="@+id/card_last_name_title" />

            <TextView
                android:id="@+id/card_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_last_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/card_first_name"
                app:layout_constraintTop_toBottomOf="@+id/card_first_name" />

            <TextView
                android:id="@+id/card_grade_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/card_first_name_title"
                app:layout_constraintTop_toBottomOf="@+id/card_first_name_title" />

            <TextView
                android:id="@+id/card_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/card_last_name"
                app:layout_constraintTop_toBottomOf="@+id/card_last_name" />

            <TextView
                android:id="@+id/card_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_input_title"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/card_grade_title"
                app:layout_constraintTop_toBottomOf="@+id/card_grade_title" />

            <TextView
                android:id="@+id/card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_text_size"
                app:layout_constraintStart_toStartOf="@+id/card_grade"
                app:layout_constraintTop_toBottomOf="@+id/card_grade" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>